--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/HttpRoutingAssertionDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/HttpRoutingAssertionDialog.form
@@ -3,7 +3,7 @@
   <grid id="83deb" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="52" y="32" width="492" height="632"/>
+      <xy x="52" y="32" width="528" height="632"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -133,26 +133,6 @@
                           <text resource-bundle="com/l7tech/console/resources/HttpRoutingAssertionDialog" key="timeoutRadioDefaultLabel.text"/>
                         </properties>
                       </component>
-                      <component id="5af00" class="javax.swing.JSpinner" binding="readTimeoutSpinner">
-                        <constraints>
-                          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                            <minimum-size width="60" height="-1"/>
-                          </grid>
-                        </constraints>
-                        <properties>
-                          <enabled value="false"/>
-                        </properties>
-                      </component>
-                      <component id="91560" class="javax.swing.JSpinner" binding="connectTimeoutSpinner">
-                        <constraints>
-                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                            <minimum-size width="60" height="-1"/>
-                          </grid>
-                        </constraints>
-                        <properties>
-                          <enabled value="false"/>
-                        </properties>
-                      </component>
                       <component id="ba180" class="javax.swing.JCheckBox" binding="followRedirectCheck">
                         <constraints>
                           <grid row="3" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -187,6 +167,22 @@
                           <selected value="true"/>
                           <text resource-bundle="com/l7tech/console/resources/HttpRoutingAssertionDialog" key="timeoutRadioDefaultLabel.text"/>
                         </properties>
+                      </component>
+                      <component id="10715" class="javax.swing.JTextField" binding="connectTimeoutTextField">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <preferred-size width="60" height="-1"/>
+                          </grid>
+                        </constraints>
+                        <properties/>
+                      </component>
+                      <component id="af483" class="javax.swing.JTextField" binding="readTimeoutTextField">
+                        <constraints>
+                          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <preferred-size width="60" height="-1"/>
+                          </grid>
+                        </constraints>
+                        <properties/>
                       </component>
                     </children>
                   </grid>
