--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/SecurePasswordManagerWindow.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/SecurePasswordManagerWindow.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="559" height="402"/>
+      <xy x="48" y="54" width="608" height="402"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -52,7 +52,7 @@
                   <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="&amp;Close"/>
+                  <text resource-bundle="com/l7tech/console/panels/SecurePasswordManagerWindow" key="button.close.label"/>
                 </properties>
               </component>
               <vspacer id="99232">
@@ -65,7 +65,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="&amp;Remove"/>
+                  <text resource-bundle="com/l7tech/console/panels/SecurePasswordManagerWindow" key="button.remove.label"/>
                 </properties>
               </component>
               <component id="4e321" class="javax.swing.JButton" binding="editButton" default-binding="true">
@@ -73,7 +73,7 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="&amp;Edit"/>
+                  <text resource-bundle="com/l7tech/console/panels/SecurePasswordManagerWindow" key="button.edit.label"/>
                 </properties>
               </component>
               <component id="80e5e" class="javax.swing.JButton" binding="addButton" default-binding="true">
@@ -81,7 +81,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="&amp;Add"/>
+                  <text resource-bundle="com/l7tech/console/panels/SecurePasswordManagerWindow" key="button.add.label"/>
                 </properties>
               </component>
               <component id="e1e9a" class="javax.swing.JButton" binding="helpButton" default-binding="true">
@@ -89,7 +89,7 @@
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="&amp;Help"/>
+                  <text resource-bundle="com/l7tech/console/panels/SecurePasswordManagerWindow" key="button.help.label"/>
                 </properties>
               </component>
             </children>
@@ -102,7 +102,7 @@
         </constraints>
         <properties>
           <labelFor value="40ea4"/>
-          <text value="&amp;Securely Stored Passwords"/>
+          <text resource-bundle="com/l7tech/console/panels/SecurePasswordManagerWindow" key="panel.label"/>
         </properties>
       </component>
     </children>
