--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/SecurePasswordPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/SecurePasswordPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="690" height="580"/>
+      <xy x="48" y="54" width="707" height="580"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -63,7 +63,7 @@
             </constraints>
             <properties>
               <labelFor value="ea7cf"/>
-              <text value="Name:"/>
+              <text value="&amp;Name:"/>
             </properties>
           </component>
           <vspacer id="50a2a">
@@ -145,7 +145,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <labelFor value="5e508"/>
+              <labelFor value="100e5"/>
               <text value="&amp;Password:"/>
             </properties>
           </component>
@@ -162,7 +162,7 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <labelFor value="9c14d"/>
+              <labelFor value="a3b5d"/>
               <text value="Con&amp;firm Password:"/>
             </properties>
           </component>
@@ -183,7 +183,7 @@
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <minimum-size width="550" height="300"/>
+                <minimum-size width="200" height="100"/>
                 <preferred-size width="550" height="300"/>
               </grid>
             </constraints>
@@ -237,7 +237,7 @@
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <labelFor value="5e508"/>
+              <labelFor value="83d6e"/>
               <text value="&amp;PEM Private Key:"/>
             </properties>
           </component>
@@ -246,7 +246,8 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Type"/>
+              <labelFor value="3e859"/>
+              <text value="&amp;Type:"/>
             </properties>
           </component>
           <component id="3e859" class="javax.swing.JComboBox" binding="typeComboBox">
